@startuml
left to right direction
title Módulo Reserva - Design de Componentes
skinparam componentStyle uml2
skinparam package {
  backgroundColor #E8EAF6
  borderColor #303F9F
}

' ==========================================================
' 1. DEFINIÇÃO DAS CAMADAS E INTERFACES
' ==========================================================

package Apresentacao <<Camada do Usuário>> {
    interface InterfaceApresentacaoReserva as IAReserva
    [ModuloApresentacaoReserva] as MAReserva
}

package Servico <<Camada Lógica>> {
    interface InterfaceServicoReserva as ISReserva
    [ModuloServicoReserva] as MSReserva
}

package Persistencia <<Camada de Acesso>> {
    interface InterfaceAcessoInformacao as IAI
    [ModuloAcessoInformacao] as MAI
}

[BD / STL] as DadosBrutos

' ==========================================================
' 2. RELAÇÕES DE REALIZAÇÃO (BOLA - O FORNECEDOR)
' ==========================================================
IAReserva o-- MAReserva : <<Controladora Apresentação>>
ISReserva o-- MSReserva : <<Controladora Serviço>>
IAI o-- MAI : <<Controladora Acesso Informação (CAI)>>


' ==========================================================
' 3. RELAÇÕES DE USO (SOQUETE - O CLIENTE)
' ==========================================================
' Apresentação depende de Serviço
MAReserva ..> ISReserva : Depende (CRUD Reserva)

' Serviço depende de Persistência
MSReserva ..> IAI : Depende (Buscar Dados)

' Persistência usa os Dados Brutos
MAI ..> DadosBrutos : Usa (READ/WRITE)

@enduml